add login page mockup add home page mockup

--- a/src/theme/base/utilities.scss
+++ b/src/theme/base/utilities.scss
@@ -7,6 +7,9 @@
 .bg-white{
     background-color: $color-white;
 }
+.bg-red{
+    background-color: $color-red;
+}
 .bg-blue{
     background-color: $color-blue;
 }
