--- a/src/theme/abstract/variables.scss
+++ b/src/theme/abstract/variables.scss
@@ -12,6 +12,8 @@ $color-light-yellow: #ffce24;
 
 $color-white: #ffffff;
 
+$color-red: #ff0000;
+
 $color-gray: #303131;
 $color-light-gray: #919191;
 $color-dark-gray: #181919;
