--- a/src/theme/pages/login.scss
+++ b/src/theme/pages/login.scss
@@ -36,10 +36,12 @@
     width: 100%;
     height: 30%;
     border-radius: 15px;
+    border: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem;
+    cursor: pointer;
 }
 .login-button__text{
     flex: 1 1 80%;
