--- a/src/theme/components/topbars.scss
+++ b/src/theme/components/topbars.scss
@@ -6,21 +6,23 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 15px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.733);
-    margin-bottom: 2rem;
+    box-shadow: -3px 3px 9px rgba(0, 0, 0, 0.6);
+
+
+    &__container{
+        width: 100%;
+        padding: 1rem;
+        margin-bottom: 2rem;
+    }
 
     &__back{
-        border: 0px;
-        cursor: pointer;
         margin-right: 10px;
-        background-color: transparent;
 
         &--img{
             width: 2.5rem;
         }
     }
     &__switch-btn{
-        cursor: pointer;
         display: inline-block;
         &--img{
             height: 2.5rem;
@@ -67,7 +69,6 @@
 
         &--img{
             width: 100%;
-            border-radius: 50%;
         }
     }
 }
