--- a/src/theme/components/carrousel.scss
+++ b/src/theme/components/carrousel.scss
@@ -14,6 +14,7 @@
         width: 400%;
         height: 100%;
         max-height: 40rem;
+        padding: 10px;
     }
     &__game-box{
         width: 70vw;
@@ -22,7 +23,7 @@
         max-height: 40rem;
         border: 2px solid #ffce24;
         border-radius: 15px;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.733);
+        box-shadow: -3px 3px 9px rgba(0, 0, 0, 0.6);
         position: relative;
         display: flex;
         justify-content: center;
