--- a/src/theme/pages/home.scss
+++ b/src/theme/pages/home.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 4rem 2rem;
+    padding: 4rem 0rem;
     background-color: $color-dark-blue;
     overflow: scroll;
 }
@@ -24,6 +24,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 2rem;
+    padding: 1rem;
 
     &__game{
         display: flex;
@@ -35,9 +36,11 @@
             width: 100%;
             border: 2px solid #ffce24;
             border-radius: 15px;
+            box-shadow: -3px 3px 9px rgba(0, 0, 0, 0.6);
 
             img{
                 width: 100%;
+                height: 100%;
                 border-radius: 15px;
             }
         }
@@ -60,8 +63,13 @@
     padding: 1rem;
     border: 2px solid #ffce24;
     border-radius: 15px;
-    margin: 3rem 0;
+    box-shadow: -3px 3px 9px rgba(0, 0, 0, 0.6);
 
+    &__container{
+        width: 100%;
+        margin: 3rem 0;
+        padding: 1rem;
+    }
     &__top-box{
         display: flex;
         justify-content: space-between;
@@ -118,7 +126,7 @@
         &--tournament-text{
             color: #fff;
             text-align: center;
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             line-height: 1.2;
             font-family:'Quicksand Medium';
             text-transform: uppercase;
@@ -126,26 +134,31 @@
         }
         &--tournament-bar{
             font-family:'Quicksand Medium';
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             color: #fff;
-
-            span:last-child{
-                margin-left: 5px;
-                height: 8px;
-                border-radius: 50%;
-                width: 100%;
-                background-color: #303131;
-                position: relative;
-            }
-            span:last-child::before{
-                position: absolute;
-                display: inline-block;
-                content: '';
-                border-radius: 50%;
-                left: 0;
-                background-color: #ffce24;
-            }
-
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        &--tournament-gray-bar{
+            display: inline-block;
+            margin-left: 5px;
+            height: 8px;
+            border-radius: 8px;
+            width: 100%;
+            background-color: #303131;
+            position: relative;
+            z-index: 1;
+        }
+        &--tournament-yellow-bar{
+            position: absolute;
+            z-index: 4;
+            display: inline-block;
+            content: '';
+            border-radius: 8px;
+            left: 0;
+            height: 100%;
+            background-color: #ffce24;
         }
     }
 }
