--- a/src/theme/components/topbars.scss
+++ b/src/theme/components/topbars.scss
@@ -17,7 +17,8 @@
 
     &__back{
         margin-right: 10px;
-
+        background: transparent;
+        border: 0px;
         &--img{
             width: 2.5rem;
         }
@@ -69,6 +70,7 @@
 
         &--img{
             width: 100%;
+            border-radius: 50%;
         }
     }
 }
