add home widgets with fake data

--- a/src/theme/components/topbars.scss
+++ b/src/theme/components/topbars.scss
@@ -25,6 +25,7 @@
     }
     &__switch-btn{
         display: inline-block;
+        cursor: pointer;
         &--img{
             height: 2.5rem;
         }
