--- a/src/theme/pages/home.scss
+++ b/src/theme/pages/home.scss
@@ -31,6 +31,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        background-color: transparent;;
+        border: 0px;
+        cursor: pointer;
+
         &--box{
             display: inline-block;
             width: 100%;
@@ -44,6 +48,7 @@
                 border-radius: 15px;
             }
         }
+
         &--title{
             display: inline-block;
             margin-top: 1rem;
@@ -52,6 +57,7 @@
             font-size: 1.6rem;
             font-family:'Quicksand Medium';
         }
+        
         &--title::first-letter{text-transform: uppercase;}
     }
 }
