add game page widgets

--- a/src/theme/_main.scss
+++ b/src/theme/_main.scss
@@ -9,7 +9,11 @@
 @import "./components/buttons.scss";
 @import "./components/topbars.scss";
 @import "./components/carrousel.scss";
+@import "./components/boosters.scss";
+@import "./components/leaderboard.scss";
+@import "./components/achievements.scss";
 
 @import "./pages/login.scss";
 @import "./pages/home.scss";
+@import "./pages/game.scss";
 
