--- a/src/theme/base/tipography.scss
+++ b/src/theme/base/tipography.scss
@@ -3,27 +3,27 @@
 @font-face {
     font-family: "Quicksand Light";
     font-weight: 300;
-    src: url("./src/assets/fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
+    src: url("/src/assets/fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
 }
 @font-face {
     font-family: "Quicksand Regular";
     font-weight: 400;
-    src: url("./src/assets/fonts/Quicksand/Quicksand-Regular.ttf");
+    src: url("/src/assets/fonts/Quicksand/Quicksand-Regular.ttf");
 }
 @font-face {
     font-family: "Quicksand Medium";
     font-weight: 600;
-    src: url("./src/assets/fonts/Quicksand/Quicksand-Medium.ttf");
+    src: url("/src/assets/fonts/Quicksand/Quicksand-Medium.ttf");
 }
 @font-face {
     font-family: "Quicksand Semibold";
     font-weight: 700;
-    src: url("./src/assets/fonts/Quicksand/Quicksand-SemiBold.ttf");
+    src: url("/src/assets/fonts/Quicksand/Quicksand-SemiBold.ttf");
 }
 @font-face {
     font-family: "Quicksand Bold";
     font-weight: 900;
-    src: url("./src/assets/fonts/Quicksand/Quicksand-Bold.ttf");
+    src: url("/src/assets/fonts/Quicksand/Quicksand-Bold.ttf");
 }
 
 @font-face {
