--- a/src/theme/components/buttons.scss
+++ b/src/theme/components/buttons.scss
@@ -16,3 +16,38 @@
         text-transform: uppercase;
     }
 }
+
+// LETS PLAY BUTTON
+.lets-play-btn{
+    width: 80%;
+    padding: 1rem 2rem;
+    border-radius: 30px;
+    margin: 2rem auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
+
+    &__text{
+        color: #fff;
+        text-shadow: -2px 5px 4px rgba(20, 20, 20, 0.795);
+        font-size: 1.6rem;
+        font-family: "Russo One";
+        text-transform: uppercase;
+    }
+    &__cash{
+        display: flex;
+        align-items: center;
+
+        span{
+            font-size: 1.5rem;
+            font-family: "Russo One";
+            color: #fff;
+        }
+        img{
+            display: inline-block;
+            width: 2.5rem;
+            margin-left: 5px;
+        }
+    }
+}
