--- a/src/theme/components/topbars.scss
+++ b/src/theme/components/topbars.scss
@@ -5,14 +5,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 0;
     border-radius: 15px;
     box-shadow: -3px 3px 9px rgba(0, 0, 0, 0.6);
+    transition: all 2s ease-in;
 
 
     &__container{
         width: 100%;
         padding: 1rem;
         margin-bottom: 2rem;
+        position: relative;
+        z-index: 999;
     }
 
     &__back{
@@ -24,7 +28,7 @@
         }
     }
     &__switch-btn{
-        display: inline-block;
+        display: flex;
         cursor: pointer;
         &--img{
             height: 2.5rem;
