profile and wallet

--- a/src/theme/_main.scss
+++ b/src/theme/_main.scss
@@ -11,9 +11,12 @@
 @import "./components/carrousel.scss";
 @import "./components/boosters.scss";
 @import "./components/leaderboard.scss";
+@import "./components/label-option.scss";
 @import "./components/achievements.scss";
 
 @import "./pages/login.scss";
 @import "./pages/home.scss";
+@import "./pages/profile.scss";
+@import "./pages/wallet.scss";
 @import "./pages/game.scss";
 
