--- a/src/theme/base/tipography.scss
+++ b/src/theme/base/tipography.scss
@@ -38,21 +38,29 @@
     text-align: center;
     width: 100%;
     text-transform: uppercase;
+    text-shadow: 4px 3px 2px rgba(20, 20, 20, 0.795);
     letter-spacing: 3px;
 
     &__1{
-        font-size: 3rem;
+        font-size: 1.4rem;
         color: $color-white;
+        
+        &--cap{
+            text-transform: capitalize;
+        }
     }
     &__2{
         font-size: 1.6rem;
         color: $color-white;
-        text-shadow: 4px 3px 2px rgba(20, 20, 20, 0.795);
         margin: 2.5rem 0;
     }
     &__3{
         font-size: 1.8rem;
         color: $color-light-yellow;
         margin: 1.5rem 0;
+
+        &--cap{
+            text-transform: capitalize;
+        }
     }
 }
