--- a/src/theme/base/utilities.scss
+++ b/src/theme/base/utilities.scss
@@ -60,6 +60,13 @@
 .bg-play-diamond{
     background-image: linear-gradient(to right, #e9345b, #951b81);
 }
+.bg-circle-oranyellow{
+    background-image: linear-gradient(45deg, #ff6424 30%, #ffbf24 80%);
+}
+.bg-circle-viopink{
+    background-image: linear-gradient(45deg, #951b81 30%, #ff375f 80%);
+}
+
 
 .disabled{
     opacity: .6 !important;
@@ -76,11 +83,21 @@
 .border-light-white{
     border: 1px solid #5f5f5f;
 }
+.border-coin-box{
+    border: 2px solid #ffce24;
+}
+.border-diamond-box{
+    border: 2px solid #701b62d3;
+}
+
 
 // COLORS
 
 .c-white{
-    color: #fff;
+    color: #fff !important;
+}
+.c-red{
+    color: #ff3963 !important;
 }
 .c-gray{
     color: $color-font-gray-1;
@@ -92,6 +109,8 @@
 // MARGINS
 
 .m-auto-center{margin: 0 auto;}
+
+.ml-10{margin-left: 5px;}
 
 .mr-auto{margin-right: auto;}
 
