--- a/src/theme/components/topbars.scss
+++ b/src/theme/components/topbars.scss
@@ -22,7 +22,10 @@
     &__back{
         margin-right: 10px;
         background: transparent;
-        border: 0px;
+        border: 0px;        
+        display: flex;
+        align-items: center;
+        
         &--img{
             width: 2.5rem;
         }
