--- a/src/theme/components/topbars.scss
+++ b/src/theme/components/topbars.scss
@@ -77,6 +77,7 @@
         width: 4rem;
         height: 4rem;
         border-radius: 50%;
+        cursor: pointer;
 
         &--img{
             width: 100%;
