--- a/src/theme/_main.scss
+++ b/src/theme/_main.scss
@@ -13,6 +13,7 @@
 @import "./components/leaderboard.scss";
 @import "./components/label-option.scss";
 @import "./components/achievements.scss";
+@import "./components/modals.scss";
 
 @import "./pages/login.scss";
 @import "./pages/home.scss";
